burger menu fixed spacing

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -179,10 +179,16 @@
     text-align: left;
   }
 
+  .fellowship_link {
+    padding-top: 10px;
+  }
+
   .burger_content {
     display: flex;
     flex-direction: column;
     padding-left: 10px;
+    font-size: 15px;
+    gap: 10px;
   }
   .dropdown:hover .dropdown_content {
     display: none;
