--- a/src/components/shared/button.css
+++ b/src/components/shared/button.css
@@ -19,6 +19,7 @@
 }
 
 .header_btn {
+  margin-top: 40px;
   background-color: #ffffff;
   color: #15151d;
 }
